--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body style="background-image: url(&#39;back.jfif&#39;); background-repeat: no-repeat;background-size: cover;  ">
     <div>
-		<marquee behavior="scroll" direction="left" scrollamount="26"><font color="black" size="13px">张欣豪</font></marquee>
+		<marquee behavior="scroll" direction="left" scrollamount="26"><font color="black" size="13px">突然发现我长得好帅人也巨好 没有复杂的社交一天天只知道写作业吃饭和睡觉。简直是一个孤独忧郁帅哥</font></marquee>
         <marquee behavior="scroll" direction="left" scrollamount="30"><font color="red" size="15px">Ciallo～(∠・ω&lt; )⌒★</font></marquee>
         <marquee behavior="scroll" direction="left" scrollamount="15"><font color="aqua" size="11px">Ciallo～(∠・ω&lt; )⌒☆</font></marquee>
         <marquee behavior="scroll" direction="left" scrollamount="25"><font>Ciallo～(∠・ω&lt; )⌒★</font></marquee>
